native/include/photon/photon.h

/* ------------------------------------------------------------------------ */
/* Scalars                                                                    */
/* ------------------------------------------------------------------------ */

/** 0 = false, non-zero = true. Never use C `bool` across the boundary. */
typedef int32_t ph_bool;
/**
 * Packed RGBA, one byte per channel, red in the most significant byte:
 * 0xRRGGBBAA. Bindings can compute this without calling us.
 *
 * PH_COLOR_AUTO (0 — transparent black) means "let the theme or palette
 * decide". Fully transparent black is never a useful explicit color, so it is
 * free to spend as the sentinel.
 */
typedef uint32_t ph_color;
/** Inclusive data-space interval. */
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
/** Mirrors core `RenderType` — the GL buffer-usage hint. */
typedef int32_t ph_render_type;
/* ------------------------------------------------------------------------ */
/* Colormaps and palettes                                                     */
/* ------------------------------------------------------------------------ */

/**
 * How a layer asks for a continuous colormap.
 *
 * `name` is a built-in ("viridis", "plasma", "inferno", "magma", "cividis",
 * "turbo", "grayscale", "coolwarm", "RdBu", "BrBG", "spectral", "twilight") or
 * anything passed to ph_colormap_register. Unknown names — and NULL — resolve to
 * viridis rather than failing, because a chart that draws in the wrong colours
 * is easier to notice than one that does not draw.
 *
 * `stops` overrides the name with anchors given inline, spaced evenly and
 * interpolated linearly. Their alpha is ignored; a colormap carries no opacity.
 */
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  /** High values take the low end's colour. */
  ph_bool         reverse;
  /** 0 is continuous; otherwise the ramp is flattened into this many bands. */
  int32_t         discrete_steps;
} ph_colormap_spec;
/** Mirrors core `BarOptions.orientation`. */
typedef int32_t ph_orientation;
/**
 * Mirrors core `AreaOptions`.
 *
 * A band between `y` and a base — a triangle strip alternating base and top at
 * each x. Pass cumulative values in `base` to stack several areas.
 */
typedef struct ph_area_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  int32_t        count;
  /** Per-point lower edge, `count` entries. NULL uses `base_value`. */
  const double*  base;
  /** The lower edge when `base` is NULL. Zero is the usual baseline. */
  double         base_value;
  /** PH_COLOR_AUTO is the core's translucent blue, rgba(59,130,246,0.4). */
  ph_color       color;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_area_desc;
/**
 * Mirrors core `BarOptions`.
 *
 * `x` is the bar *centre* along the position axis and `y` its extent along the
 * value axis; which of those is horizontal depends on `orientation`.
 */
typedef struct ph_bar_desc {
  uint32_t        struct_size;
  const double*   x;
  const double*   y;
  int32_t         count;
  /** Per-bar baseline, `count` entries. NULL uses `base_value`. */
  const double*   base;
  double          base_value;
  /** Bar width in data units. 0 = 80% of the median spacing, as in the core. */
  double          width;
  /** Shift every bar along the position axis — how grouped bars are built. */
  double          offset;
  ph_orientation  orientation;
  ph_color        color;
  /** Per-bar colour, `count` entries. NULL = uniform `color`. */
  const ph_color* colors;
  const char*     name;
  const char*     y_axis;
  ph_render_type  render_type;
} ph_bar_desc;
/**
 * Mirrors core `PieOptions`.
 *
 * Slices sweep clockwise from `start_angle`, and the values need not sum to
 * anything — they are normalized. Set `equal_aspect` on the plot or the circle
 * comes out an ellipse.
 */
typedef struct ph_pie_desc {
  uint32_t        struct_size;
  /** Slice magnitudes. */
  const double*   values;
  int32_t         count;
  /** Per-slice colour, `count` entries. NULL uses the core's ten-colour palette. */
  const ph_color* colors;
  double          center_x;
  double          center_y;
  /** Outer radius in data units. 0 = 1. */
  double          radius;
  /** Inner radius. Greater than zero makes a donut. */
  double          inner_radius;
  /** First slice edge in radians. 0 = pi/2, twelve o'clock, as in the core. */
  double          start_angle;
  const char*     name;
  const char*     y_axis;
  ph_render_type  render_type;
} ph_pie_desc;
/**
 * Mirrors core `StemOptions`.
 *
 * A vertical line from `baseline` to each y, with a disc at the tip — a lollipop
 * chart, and the usual way to draw a discrete signal.
 */
typedef struct ph_stem_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  int32_t        count;
  /** Where the stems start. Zero is the usual baseline. */
  double         baseline;
  ph_color       color;
  /** Stem thickness in logical px. 0 = 1.5. */
  float          width;
  /** Tip marker diameter in logical px. Negative hides it; 0 = 6. */
  float          marker_size;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_stem_desc;
/**
 * Mirrors core `ErrorBarOptions`.
 *
 * Whiskers through each point, with caps, and optionally a shaded band joining
 * the low and high bounds. Errors may be symmetric (`y_err`) or asymmetric
 * (`y_err_low`/`y_err_high`), and each may be one number for every point or an
 * array of `count`.
 */
typedef struct ph_errorbar_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  int32_t        count;
  /** Symmetric half-height. Per-point when the array is set, else `y_err`. */
  const double*  y_err_array;
  double         y_err;
  /** Asymmetric below/above y. Either array overrides the symmetric value. */
  const double*  y_err_low_array;
  const double*  y_err_high_array;
  /** Symmetric half-width along x. */
  const double*  x_err_array;
  double         x_err;
  ph_color       color;
  /** Whisker and cap thickness in logical px. 0 = 1.5. */
  float          width;
  /** Cap length in logical px. Negative hides them; 0 = 6. */
  float          cap_size;
  /** Suppress the I-beam whiskers, which are on in the core. */
  ph_bool        no_whiskers;
  /** Fill a band between the low and high bounds. Off in the core. */
  ph_bool        band;
  /** Band opacity. 0 = 0.2. */
  float          band_opacity;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_errorbar_desc;
/** One box in a box plot: a position on the axis and the samples at it. */
typedef struct ph_box_group {
  double        position;
  const double* values;
  int32_t       count;
  /** PH_COLOR_AUTO uses the core's default blue. */
  ph_color      color;
  const char*   label;
} ph_box_group;
/**
 * Mirrors core `BoxOptions`.
 *
 * A Tukey box per group: the interquartile body, the median, whiskers out to
 * the furthest sample inside the 1.5-IQR fences, and a point for everything
 * beyond them. The quartiles are computed here, so the caller passes samples
 * rather than a summary.
 */
typedef struct ph_box_desc {
  uint32_t             struct_size;
  const ph_box_group*  groups;
  int32_t              group_count;
  /** Box width in data units. 0 = 0.6. */
  double               width;
  /** Suppress the Tukey box, which is on in the core. */
  ph_bool              no_box;
  /** Add a kernel-density violin. Off in the core; it replaces the box body. */
  ph_bool              violin;
  const char*          name;
  const char*          y_axis;
  ph_render_type       render_type;
} ph_box_desc;
/**
 * Mirrors core `ContourOptions`.
 *
 * Iso-lines through a scalar field by marching squares, drawn as plain
 * segments. Same grid layout as the heatmap — row-major, row 0 at the bottom —
 * so the two layer over each other without the caller reshaping anything.
 */
typedef struct ph_contour_desc {
  uint32_t                struct_size;
  const double*           values;
  int32_t                 cols;
  int32_t                 rows;
  /** The data-space rectangle the grid spans. */
  ph_range                x;
  ph_range                y;
  /** Explicit iso levels. NULL spaces `level_count` of them evenly. */
  const double*           levels;
  /** How many evenly-spaced levels, when `levels` is NULL. 0 = 8. */
  int32_t                 level_count;
  /**
   * One colour for every line. PH_COLOR_AUTO colours each level through the
   * colormap instead, which is what makes a contour plot readable without a
   * key beside it.
   */
  ph_color                color;
  /** Used when `color` is PH_COLOR_AUTO. NULL is viridis. */
  const ph_colormap_spec* colormap;
  const char*             name;
  const char*             y_axis;
  ph_render_type          render_type;
} ph_contour_desc;
/** One graph edge: two indices into the node arrays. */
typedef struct ph_edge {
  int32_t a;
  int32_t b;
} ph_edge;
/**
 * Mirrors core `GraphOptions`.
 *
 * Edges as line segments, nodes as round points. When `x` and `y` are NULL the
 * layer runs the core's force layout over `node_count` and the edges — seeded
 * on a unit circle rather than at random, so the same graph comes out the same
 * way in every host.
 */
typedef struct ph_graph_desc {
  uint32_t       struct_size;
  /** Node positions. Both NULL runs the force layout instead. */
  const double*  x;
  const double*  y;
  int32_t        node_count;
  const ph_edge* edges;
  int32_t        edge_count;
  ph_color       node_color;
  ph_color       edge_color;
  /** Node diameter in logical px. 0 = 10. */
  float          node_size;
  /** Force-layout relaxation steps, when the layer is laying out. 0 = 300. */
  int32_t        layout_iterations;
  const char*    name;
  const char*    y_axis;
  ph_render_type render_type;
} ph_graph_desc;
/**
 * Mirrors core `HexbinOptions`.
 *
 * A million-point scatter turned into a few thousand hexagons: the points are
 * binned on a hex lattice and each cell is coloured by how many landed in it.
 * The answer to overplotting, and the reason the layer counts rather than draws.
 */
typedef struct ph_hexbin_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  int32_t                 count;
  /** Hex radius in data units. 0 = about a thirtieth of the x extent. */
  double                  radius;
  /** NULL is viridis, the core's default. */
  const ph_colormap_spec* colormap;
  /** Count range mapped across the colormap. Empty means [1, the busiest cell]. */
  ph_range                domain;
  const char*             name;
  const char*             y_axis;
  ph_render_type          render_type;
} ph_hexbin_desc;
/**
 * Mirrors core `QuiverOptions`.
 *
 * An arrow per sample: a pixel-thick shaft to the tip and a screen-space head,
 * so the arrowheads stay the same size at any zoom while the field itself
 * scales with the data.
 */
typedef struct ph_quiver_desc {
  uint32_t                struct_size;
  const double*           x;
  const double*           y;
  /** The vector components at each anchor. */
  const double*           u;
  const double*           v;
  int32_t                 count;
  /**
   * Multiplier applied to (u, v) in data units. 0 auto-fits so the longest
   * arrow spans about 90% of a nominal grid cell.
   */
  double                  scale;
  ph_color                color;
  /** Shaft thickness in logical px. 0 = 1.5. */
  float                   width;
  /** Arrowhead length in logical px. 0 = 9. */
  float                   head_size;
  /**
   * Colour each arrow through a colormap instead of one flat colour. Off
   * unless `color_by` is set; the values default to each arrow's magnitude.
   */
  ph_bool                 color_by;
  /** Per-arrow values for `color_by`. NULL uses the magnitude. */
  const double*           color_values;
  const ph_colormap_spec* color_map;
  /** Value range mapped across the colormap. Empty means fit to the values. */
  ph_range                color_domain;
  const char*             name;
  const char*             y_axis;
  ph_render_type          render_type;
} ph_quiver_desc;