native/bindings/csharp/Photon.g.cs


    /// <summary>ph_area_desc — 80 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_area_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 32</summary>
        public IntPtr @base;
        /// <summary>offset 40</summary>
        public double base_value;
        /// <summary>offset 48</summary>
        public uint color;
        /// <summary>offset 56</summary>
        public IntPtr name;
        /// <summary>offset 64</summary>
        public IntPtr y_axis;
        /// <summary>offset 72</summary>
        public int render_type;
    }

    /// <summary>ph_bar_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_bar_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 32</summary>
        public IntPtr @base;
        /// <summary>offset 40</summary>
        public double base_value;
        /// <summary>offset 48</summary>
        public double width;
        /// <summary>offset 56</summary>
        public double offset;
        /// <summary>offset 64</summary>
        public int orientation;
        /// <summary>offset 68</summary>
        public uint color;
        /// <summary>offset 72</summary>
        public IntPtr colors;
        /// <summary>offset 80</summary>
        public IntPtr name;
        /// <summary>offset 88</summary>
        public IntPtr y_axis;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_pie_desc — 96 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_pie_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 24</summary>
        public IntPtr colors;
        /// <summary>offset 32</summary>
        public double center_x;
        /// <summary>offset 40</summary>
        public double center_y;
        /// <summary>offset 48</summary>
        public double radius;
        /// <summary>offset 56</summary>
        public double inner_radius;
        /// <summary>offset 64</summary>
        public double start_angle;
        /// <summary>offset 72</summary>
        public IntPtr name;
        /// <summary>offset 80</summary>
        public IntPtr y_axis;
        /// <summary>offset 88</summary>
        public int render_type;
    }

    /// <summary>ph_stem_desc — 80 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_stem_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 32</summary>
        public double baseline;
        /// <summary>offset 40</summary>
        public uint color;
        /// <summary>offset 44</summary>
        public float width;
        /// <summary>offset 48</summary>
        public float marker_size;
        /// <summary>offset 56</summary>
        public IntPtr name;
        /// <summary>offset 64</summary>
        public IntPtr y_axis;
        /// <summary>offset 72</summary>
        public int render_type;
    }

    /// <summary>ph_errorbar_desc — 128 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_errorbar_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 32</summary>
        public IntPtr y_err_array;
        /// <summary>offset 40</summary>
        public double y_err;
        /// <summary>offset 48</summary>
        public IntPtr y_err_low_array;
        /// <summary>offset 56</summary>
        public IntPtr y_err_high_array;
        /// <summary>offset 64</summary>
        public IntPtr x_err_array;
        /// <summary>offset 72</summary>
        public double x_err;
        /// <summary>offset 80</summary>
        public uint color;
        /// <summary>offset 84</summary>
        public float width;
        /// <summary>offset 88</summary>
        public float cap_size;
        /// <summary>offset 92</summary>
        public int no_whiskers;
        /// <summary>offset 96</summary>
        public int band;
        /// <summary>offset 100</summary>
        public float band_opacity;
        /// <summary>offset 104</summary>
        public IntPtr name;
        /// <summary>offset 112</summary>
        public IntPtr y_axis;
        /// <summary>offset 120</summary>
        public int render_type;
    }

    /// <summary>ph_box_group — 32 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_box_group
    {
        /// <summary>offset 0</summary>
        public double position;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int count;
        /// <summary>offset 20</summary>
        public uint color;
        /// <summary>offset 24</summary>
        public IntPtr label;
    }

    /// <summary>ph_box_desc — 64 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_box_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr groups;
        /// <summary>offset 16</summary>
        public int group_count;
        /// <summary>offset 24</summary>
        public double width;
        /// <summary>offset 32</summary>
        public int no_box;
        /// <summary>offset 36</summary>
        public int violin;
        /// <summary>offset 40</summary>
        public IntPtr name;
        /// <summary>offset 48</summary>
        public IntPtr y_axis;
        /// <summary>offset 56</summary>
        public int render_type;
    }

    /// <summary>ph_contour_desc — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_contour_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr values;
        /// <summary>offset 16</summary>
        public int cols;
        /// <summary>offset 20</summary>
        public int rows;
        /// <summary>offset 24</summary>
        public ph_range x;
        /// <summary>offset 40</summary>
        public ph_range y;
        /// <summary>offset 56</summary>
        public IntPtr levels;
        /// <summary>offset 64</summary>
        public int level_count;
        /// <summary>offset 68</summary>
        public uint color;
        /// <summary>offset 72</summary>
        public IntPtr colormap;
        /// <summary>offset 80</summary>
        public IntPtr name;
        /// <summary>offset 88</summary>
        public IntPtr y_axis;
        /// <summary>offset 96</summary>
        public int render_type;
    }

    /// <summary>ph_edge — 8 bytes, alignment 4.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_edge
    {
        /// <summary>offset 0</summary>
        public int a;
        /// <summary>offset 4</summary>
        public int b;
    }

    /// <summary>ph_graph_desc — 88 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_graph_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int node_count;
        /// <summary>offset 32</summary>
        public IntPtr edges;
        /// <summary>offset 40</summary>
        public int edge_count;
        /// <summary>offset 44</summary>
        public uint node_color;
        /// <summary>offset 48</summary>
        public uint edge_color;
        /// <summary>offset 52</summary>
        public float node_size;
        /// <summary>offset 56</summary>
        public int layout_iterations;
        /// <summary>offset 64</summary>
        public IntPtr name;
        /// <summary>offset 72</summary>
        public IntPtr y_axis;
        /// <summary>offset 80</summary>
        public int render_type;
    }

    /// <summary>ph_hexbin_desc — 88 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_hexbin_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 32</summary>
        public double radius;
        /// <summary>offset 40</summary>
        public IntPtr colormap;
        /// <summary>offset 48</summary>
        public ph_range domain;
        /// <summary>offset 64</summary>
        public IntPtr name;
        /// <summary>offset 72</summary>
        public IntPtr y_axis;
        /// <summary>offset 80</summary>
        public int render_type;
    }

    /// <summary>ph_quiver_desc — 128 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_quiver_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public IntPtr u;
        /// <summary>offset 32</summary>
        public IntPtr v;
        /// <summary>offset 40</summary>
        public int count;
        /// <summary>offset 48</summary>
        public double scale;
        /// <summary>offset 56</summary>
        public uint color;
        /// <summary>offset 60</summary>
        public float width;
        /// <summary>offset 64</summary>
        public float head_size;
        /// <summary>offset 68</summary>
        public int color_by;
        /// <summary>offset 72</summary>
        public IntPtr color_values;
        /// <summary>offset 80</summary>
        public IntPtr color_map;
        /// <summary>offset 88</summary>
        public ph_range color_domain;
        /// <summary>offset 104</summary>
        public IntPtr name;
        /// <summary>offset 112</summary>
        public IntPtr y_axis;
        /// <summary>offset 120</summary>
        public int render_type;
    }
